--- a/MyFirstApp/project.properties
+++ b/MyFirstApp/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library.reference.1=../../../../../Software/Android/android-sdk/extras/android/support/v7/appcompat
 android.library=false
+#android.library.reference.2=../../../../../Software/eclipse-workspace/appcompat_v7
